[DOR-267] Fix layout on mobile

--- a/app/assets/stylesheets/_receipt.scss
+++ b/app/assets/stylesheets/_receipt.scss
@@ -57,6 +57,7 @@
   padding-left: 0;
 }
 
-.receipt__file-list {
+.receipt__file-list,
+.receipt__case-ref {
   word-break: break-all;
 }
